# pyodys-project

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  main.py  pyproject.toml
.github/workflows/: ci.yml
EDOsSolverModules/: __init__.py  __main__.py
examples/: .gitignore  benchmark_1dheat_pyodys_vs_scipy.py  benchmark_schenemberg.ipynb  benchmark_schnakenberg.ipynb  benchmark_schnakenberg_pyodys_vs_scipy.py  benchmark_schnakenberg_sparse_vs_dense.py  benchmark_schnakenberg_with_mass_matrix_pyodys_vs_scipy.py  coupled_linear_system.py  dae_index1.py  dae_index2.py  earth_moon_sun.py  example_dae.py  example_hermite.py  example_with_mass_matrix.py  exponential_decay.py  hires_system.py  lamirande.py  lorenz_system.py  one_dimensinal_parabolic.py  one_dimensional_parabolic.py  one_dimensional_parabolic_finite_difference.py  one_dimensional_parabolic_finite_elem.py  oregonator.py  robertson_model.py  robertson_model_2.py  three_body_orbits.py  van_der_pol_osciallator.py
exemples/: coupled_linear_system.py  lorenz_system.py  robertson_model.py
odepy/: __init__.py  main.py
odepy/examples/: coupled_linear_system.py  hires_system.py  lorenz_system.py  (+1 more)
pyode/: __init__.py  main.py
pyodys/: __init__.py  main.py
systemes/: EDOs.py  SystemeDeLorentz.py
tests/: test_bdf_scheme.py  test_butcher_tableau.py  test_edos.py  test_interpolation.py  test_ode_problem.py  test_pyodys_solver.py  test_rk_schemes.py  test_rk_solver.py  test_rk_solver_with_butcher_tableau.py  test_solveur_rk_avec_tableau_de_butcher.py  test_tableau_de_butcher.py
(+48 files in other folders)
