[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EDOsSolverModules"
version = "0.1.0"
description = "A numerical solver for ODEs."
authors = [{name = "Ismael T. Ngueyong", email = "isamel.tchinda-ngueyong.1@ulaval.ca"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]